must save progress. code so clean

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -9,7 +9,9 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:HomePage}"
+        Route="HomePage" />
+    
+
 
 </Shell>
