--- a/Views/HomePage.xaml
+++ b/Views/HomePage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TerraIntel_lAI.MainPage">
+             x:Class="TerraIntel_lAI.HomePage">
 
     <ScrollView>
         <VerticalStackLayout
@@ -24,18 +24,14 @@
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
-            <Label
-                x:Name="cords"
-                Text="this is where yur coordinates go"/>
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-            <Button Text="Go to TestFile" Clicked="OnNavigateToTestFile"/>
-            <Button Text="Get cords baby" Clicked="OnCurrentPush"/>
+                Text="Go to Main Page"
+                Command="{Binding GoToMainCommand}" />
+            <Button
+                Text="Go to History"
+                Command="{Binding GoToHistoryCommand}" />
+
         </VerticalStackLayout>
     </ScrollView>
 
