--- a/Views/History.xaml
+++ b/Views/History.xaml
@@ -13,32 +13,39 @@
       HorizontalOptions="Center" />
 
         <!-- CollectionView to display each InfoItem -->
-        <CollectionView
-      ItemsSource="{Binding Items}"
-      SelectionMode="None">
-
+        <CollectionView ItemsSource="{Binding Items}" SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="models:InfoItem">
-                    <Grid Padding="10" ColumnDefinitions="*,Auto">
+                    <!-- Light background container -->
+                    <Frame
+        BackgroundColor="{StaticResource Gray100}"
+        CornerRadius="8"
+        Padding="10"
+        Margin="0,5">
+                        <Grid ColumnDefinitions="*,Auto" VerticalOptions="Center">
 
-                        <!-- The saved text -->
-                        <Label
-              Text="{Binding Name}"
-              Grid.Column="0"
-              VerticalOptions="Center" />
+                            <!-- The saved text -->
+                            <Label
+            Text="{Binding Name}"
+            Grid.Column="0"
+            VerticalOptions="Center"
+            TextColor="{StaticResource OffBlack}" />
 
-                        <!-- Delete button -->
-                        <Button
-              Text="Delete"
-              Grid.Column="1"
-                Command="{Binding Path=BindingContext.DeleteCommand,
-                    Source={RelativeSource AncestorType={x:Type ContentPage}}}"
-                CommandParameter="{Binding .}"
-                VerticalOptions="Center" />
-                    </Grid>
+                            <!-- Delete button -->
+                            <Button
+            Text="Delete"
+            Grid.Column="1"
+            Command="{Binding Path=BindingContext.DeleteCommand,
+                      Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+            CommandParameter="{Binding .}"
+            VerticalOptions="Center"
+            Style="{StaticResource SecondaryButtonStyle}" />
+                        </Grid>
+                    </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
+
 
     </VerticalStackLayout>
 </ContentPage>
